# liblifthttp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.circleci/: config.yml
.githooks/: pre-commit  readme-template.md
.github/workflows/: ci-coverage.yml  ci-fedora.yml  ci-ubuntu.yml  ci-windows.yml  ci.yml
docker/liblifthttpbuilder/: Dockerfile
example/: async_simple.cpp
examples/: CMakeLists.txt  async_batch_requests.cpp  async_post_requests.cpp  async_simple.cpp  async_simple_max_bytes.cpp  benchmark.cpp  benchmark_simple.cpp  query_builder.cpp  readme.cpp  request_headers_simple.cpp  synch_simple.cpp  transfer_progress_simple.cpp  user_data.cpp
inc/: AsyncRequest.h  EventLoop.h  IRequestCallbacks.h  IRequestCb.h  Lift.h  Request.h
inc/lift/: AsyncRequest.h  Const.hpp  CurlPool.h  Escape.h  Escape.hpp  EventLoop.h  EventLoop.hpp  EventLoop.tcc  Executor.hpp  Header.h  Header.hpp  HeaderView.hpp  Http.h  Http.hpp  IRequestCallback.h  IRequestCb.h  Init.hpp  Lift.h  Lift.hpp  LiftStatus.hpp  Method.h  MimeField.hpp  QueryBuilder.h  QueryBuilder.hpp  Request.h  Request.hpp  RequestHandle.h  RequestHandle.hpp  RequestHandle.tcc  RequestPool.h  RequestPool.hpp  RequestPool.tcc  RequestStatus.h  RequestStatus.hpp  ResolveHost.h  ResolveHost.hpp  Response.hpp  Share.hpp  Types.h  client.hpp  (+16 more)
inc/lift/impl/: copy_util.hpp  pragma.hpp
src/: AsyncRequest.cpp  CurlPool.cpp  Escape.cpp  EventLoop.cpp  Executor.cpp  Header.cpp  HeaderView.cpp  Http.cpp  IRequestCallback.cpp  Init.cpp  Lift.cpp  LiftStatus.cpp  MimeField.cpp  QueryBuilder.cpp  Request.cpp  RequestHandle.cpp  RequestPool.cpp  RequestStatus.cpp  ResolveHost.cpp  Response.cpp  Share.cpp  client.cpp  client_pool.cpp  escape.cpp  event_loop.cpp  executor.cpp  header.cpp  http.cpp  init.cpp  lift_status.cpp  main.cpp  mime_field.cpp  query_builder.cpp  request.cpp  resolve_host.cpp  response.cpp  share.cpp
src/internal/: CurlPool.h
test/: AsyncRequestTest.hpp  CMakeLists.txt  EscapeTest.hpp  EventLoopTest.hpp  HeaderTest.hpp  HttpTest.hpp  MimeFieldTest.hpp  ProxyTest.hpp  QueryBuilderTest.hpp  ResolveHostTest.hpp  ShareTest.hpp  SyncRequestTest.hpp  TimesupTest.hpp  TransferProgressRequest.hpp  UserDataRequestTest.hpp  main.cpp  setup.hpp  test_async_request.cpp  test_client.cpp  test_debug_info.cpp  test_escape.cpp  test_event_loop.cpp  test_header.cpp  test_http.cpp  test_mime_field.cpp  test_proxy.cpp  test_query_builder.cpp  test_resolve_host.cpp  test_share.cpp  test_sync_request.cpp  test_timesup.cpp  test_transfer_progress_request.cpp  test_user_data_request.cpp
